--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -33,6 +33,8 @@ jobs:
         uses: actions/checkout@v3
       - name: Setup Pages
         uses: actions/configure-pages@v3
+      - name: Setup index file
+        run: cp install.sh index.html
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
